# SelectPublisherBugFix

./: .gitignore  README.md  README.md~
Core Compare/publish_point_tool/: point_tool.h
Core Compare/publish_selected_points/: selected_points_topic.h
Core Compare/selected_points_publisher/: SelectedPointsPublisher.h
FixingCode/dispaly_mobot_view/: CMakeLists.txt
FixingCode/dispaly_mobot_view/rviz/: view.rviz
FixingCode/publish_selected_patch/: CMakeLists.txt  package.xml
FixingCode/publish_selected_patch/src/: publish_selected_patch.cpp  publish_selected_patch.h
Original Code/ros_helper_packages-master/: README.md
Original Code/ros_helper_packages-master/build_scripts/: build_functions.sh  hku_create_pkg.py
Show/dispaly_mobot_view/: package.xml
Show/dispaly_mobot_view/launch/: display_mobot_view.launch  display_mobot_view.launch~
Show/dispaly_mobot_view/rviz/: view.rviz
Show/dispaly_mobot_view/src/: display_point_info.cpp
Show/my_lin_steering/: CMakeLists.txt  CMakeLists.txt~  package.xml
Show/my_lin_steering/src/: lin_steering_wrt_odom.cpp  steering_algorithm.h
Show/my_map/: CMakeLists.txt  my_gmapping.yaml  package.xml
Show/my_path_client_console/: CMakeLists.txt  package.xml
Show/my_path_client_console/launch/: display_mobot_view.launch  display_mobot_view.launch~  my_robot_move_in_known_map.launch  test.launch
Show/my_path_client_console/src/: my_path_client_console.cpp
Show/publish_selected_patch/: CMakeLists.txt  CMakeLists.txt~  package.xml~
code_compare/publish_point_tool/: point_tool.cpp
(+9 files in other folders)
